--- a/app/src/main/res/navigation/hours_nav.xml
+++ b/app/src/main/res/navigation/hours_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.jober.avinashchintareddy.a10khourgoal.fragments.HomeFragment"
+        android:name="com.jober.avinashchintareddy.a10khourgoal.presentation.fragments.HomeFragment"
         android:label="home_host"
         tools:layout="@layout/home_host" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/history"
-        android:name="com.jober.avinashchintareddy.a10khourgoal.fragments.History"
+        android:name="com.jober.avinashchintareddy.a10khourgoal.presentation.fragments.History"
         android:label="fragment_history"
         tools:layout="@layout/fragment_history" />
 </navigation>
