Added Custom view for date viewer

--- a/app/src/main/res/layout/home_host.xml
+++ b/app/src/main/res/layout/home_host.xml
@@ -9,6 +9,14 @@
     <!-- TODO: Update blank fragment layout -->
 
 
+    <com.jober.avinashchintareddy.a10khourgoal.views.SystemTimeViewer
+        android:id="@+id/setText_vw"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        app:showDate="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -19,6 +27,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.696" />
+
+
 
     <Button
         android:id="@+id/btn_start"
@@ -39,5 +49,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_start"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
