--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginLeft="12dp"
+    android:layout_marginStart="12dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp">
 
@@ -12,6 +12,7 @@
         android:id="@+id/tx_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:text="texter"
         app:layout_constraintRight_toLeftOf="@+id/tx_end"
         app:layout_constraintLeft_toLeftOf="parent"
