--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -6,9 +6,24 @@
     android:layout_width="match_parent"
     android:layout_marginStart="12dp"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    android:layout_marginEnd="5dp">
 
-    <TextView
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/cd_view"
+        android:layout_marginStart="5dp"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/cardview_shadow_end_color">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <com.jober.avinashchintareddy.a10khourgoal.views.SystemTimeViewer
         android:id="@+id/tx_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
+    <com.jober.avinashchintareddy.a10khourgoal.views.SystemTimeViewer
         android:id="@+id/tx_end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,15 +46,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.jober.avinashchintareddy.a10khourgoal.views.SystemTimeViewer
         android:id="@+id/tx_hours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="texter3"
+        android:layout_marginEnd="5dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintVertical_chainStyle="spread_inside"
         app:layout_constraintLeft_toRightOf="@+id/tx_end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
