--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,12 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.fragments.History">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+ <Button
+
+     android:id="@+id/btn_filter"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:text="Add Filters"
+     app:layout_constraintVertical_chainStyle="packed"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent" />
 
  <androidx.recyclerview.widget.RecyclerView
+     android:id="@+id/RecyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
-     android:id="@+id/RecyclerView"
-     />
-
+     android:layout_marginTop="30dp"
+     app:layout_constraintVertical_chainStyle="packed"
+     app:layout_constraintTop_toBottomOf="@+id/btn_filter" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
