added Fix for glitch

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.fragments.History">
+    tools:context=".presentation.fragments.History"
+    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
 
  <Button
@@ -19,7 +20,8 @@
      app:layout_constraintVertical_chainStyle="packed"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
-     app:layout_constraintTop_toTopOf="parent" />
+     app:layout_constraintTop_toTopOf="parent"
+     app:layout_constraintBottom_toTopOf="@id/RecyclerView"/>
 
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/RecyclerView"
@@ -29,4 +31,4 @@
      app:layout_constraintVertical_chainStyle="packed"
      app:layout_constraintTop_toBottomOf="@+id/btn_filter" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+</ScrollView>
