--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -12,16 +12,28 @@
     >
 
  <Button
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:id="@+id/older_btn"
+     android:text="From Oldest"
+     app:layout_constraintRight_toLeftOf="@id/btn_filter"/>
 
+ <Button
      android:id="@+id/btn_filter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Add Filters"
-     app:layout_constraintVertical_chainStyle="packed"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/RecyclerView"/>
+ <Button
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:id="@+id/clear_btn"
+     android:text="Clear Filter"
+     app:layout_constraintLeft_toRightOf="@id/btn_filter"/>
+
 
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/RecyclerView"
